fixed bug with sticky and mobile navigation not showing properly

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@
 .header {
   font-size: 1.8rem;
   width: 100%;
-
+  height: 7rem;
   margin: 0 auto;
   transition: all 0.5s ease;
 }
@@ -123,7 +123,7 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0.877);
   z-index: 999;
-  height: 6rem !important;
+  height: 7rem !important;
   padding-top: 0;
   padding-bottom: 0;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
@@ -136,7 +136,7 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0.877);
   z-index: 999;
-  height: 6rem !important;
+  height: 7rem !important;
   padding-top: 0;
   padding-bottom: 0;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
